# Syncwave

./: .gitignore  Architecture.md  BUILD_GUIDE.md  Cargo.toml  QUICK_START.md  README_APP.md  TEST_GUIDE.md  TROUBLESHOOTING_OPUS_BUILD.md  build_app.py  check_devices.py  pyproject.toml  receiver_enhanced.py  receiver_silent.py  requirements.txt  syncwave.spec  syncwave_app.py  test_monitor.py
src/: lib.rs
